# lfge

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  architecture.odg
client/: CMakeLists.txt  entry.cpp
core/: CMakeLists.txt  DataContainer.hpp  Heartbeat.cpp  Heartbeat.hpp  core_atoms.hpp  entry.cpp  heartbeat.cpp  logger.cpp
core/src/: entry.cpp  heartbeat.cpp  lfge_errors.cpp  logger.cpp
core/test/: entry.cpp  test_heartbeat.cpp  test_logger.cpp
include/core/: DataContainer.hpp  Heartbeat.hpp  core_atoms.hpp  core_typed_actors.hpp  data_container.hpp  heartbeat.hpp  lfge_errors.hpp  logger.hpp
include/resource_manager/: actor_defs.hpp  registering_service.hpp  service_manager.hpp  treatment.hpp
include/resource_manager/task_distribution/: simple_distribution.hpp  split_and_aggregate_distribution.hpp
resource_manager/: CMakeLists.txt  RMConfig.hpp  RegisteringService.cpp  RegisteringService.hpp  ServiceManager.cpp  ServiceManager.hpp  entry.cpp  registering_service.cpp  registering_service.hpp  rm_config.cpp  service_manager.cpp  service_manager.hpp
resource_manager/src/: entry.cpp  registering_service.cpp  rm_config.hpp  service_manager.cpp
resource_manager/test/: test_service_manager.cpp
tests/: entry.cpp
